--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,9 +1,11 @@
 {% if page.nocomments %}
 {% else %}
 {% if site.youyan_uid %}
+<div class="post-comments">
 <!-- UY BEGIN -->
-<div id="uyan_frame"></div>
-<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2139092"></script>
+  <div id="uyan_frame"></div>
+  <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2139092"></script>
+</div>
 <!-- UY END -->
 {% endif %}
 {% if site.disqus_shortname %}
