--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,9 +1,11 @@
 {% if page.nocomments %}
 {% else %}
 {% if site.youyan_uid %}
-<div class="post-comments">
-	</div>
- <!-- JiaThis Button BEGIN -->
+<div class="post-comments"></div>
+<!-- UY BEGIN -->
+  <div id="uyan_frame"></div>
+  <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2139092"></script>
+<!-- JiaThis Button BEGIN -->
    <div class="jiathis_style">
 	<span class="jiathis_txt">分享到：</span>
 	<a class="jiathis_button_qzone">QQ空间</a>
@@ -12,16 +14,11 @@
     	<a class="jiathis_button_weixin">微信</a>
     	<a href="http://www.jiathis.com/share?uid=2139092" class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis" target="_blank">更多</a>
     	<a class="jiathis_counter_style"></a>
-   </div>
-	<br />
    <script type="text/javascript">
       var jiathis_config = {data_track_clickback:'true'};
    </script>
    <script type="text/javascript" src="http://v3.jiathis.com/code/jia.js?uid=2139092" charset="utf-8"></script>
 <!-- JiaThis Button END -->
-<!-- UY BEGIN -->
-  <div id="uyan_frame"></div>
-  <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2139092"></script>
 <!-- UY END -->
 {% endif %}
 {% if site.disqus_shortname %}
